2008-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	Davor Ocelic reported the problem.
	* application-src/Makefile.am: Use applicationexec_PROGRAMS and
	  applicationexec_SCRIPTS to install executable.

2008-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (show_stat_info): Use getpwuid_r
						       and getgrgid_r.
2008-03-25  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/swig.m4: fix the fix to the fix for FreeBSD systems'
	  peculiar linking of threading libraries.

2008-03-20  Dan Locks <dwlocks@zmanda.com>
	* packaging/deb/control: removed grep dependency
	* packaging/deb/amanda-backup-client.postinst 
	  packaging/deb/amanda-backup-server.postinst 
	  packaging/deb/amanda-backup-server.postrm
	  packaging/deb/amanda-backup-client.postrm:  removed call to
	  ldconfig to satisfy lintian
	* packaging/deb/amanda-backup-server.lintian
	  packaging/deb/amanda-backup-client.lintian: sorted and added new
	  overrides
	* packaging/deb/amanda-backup-client.dirs: removed var/amanda

2008-03-18  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/activate-devpay.c: fix type warning

2008-03-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Correctly check if two hosts map to the same
				 name.

2008-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am perl/amglue/mainloop.c perl/amglue/amglue.h
	  perl/amglue/source.c: rename mainloop.c to source.c to avoid
	  conflicts with MainLoop.c on case-insensitive filesystems

2008-03-14  Dan Locks <dwlocks@zmanda.com>
	* Initial debian release: This package is based on Bdale Garbee's
	  work as the official debian maintainer for amanda.

2008-03-14  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Document global and by dumptype
					    property.
	* server-src/server_util.c: Rename _proplist to _property.
	* server-src/diskfile.c: Rename _proplist to _property.